--- a/app/src/main/res/layout/fragment_terminal.xml
+++ b/app/src/main/res/layout/fragment_terminal.xml
@@ -70,7 +70,7 @@
             android:background="@drawable/button_border"
             android:backgroundTint="#FFFFFF"
             android:ems="10"
-            android:inputType="textPersonName"
+            android:inputType="textNoSuggestions"
             android:paddingStart="64px"
             android:paddingLeft="64px"
             android:paddingTop="32px"
