--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -389,6 +389,9 @@
         android:layout_marginBottom="8dp"
         android:text="Save Settings"
         app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
+        android:background="@drawable/button_border"
+        android:backgroundTint="@color/colorPrimary"
+        android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
